# meson-introspect-bug

./: meson.build  meson_introspect_bug.c  test.sh
